# FlickTok

./: .gitignore  README.md  bun.lockb  package-lock.json  package.json  turbo.json
.trash/client/: package.json
.trash/client/src/: main.js
.trash/client/views/: index.handlebars
.trash/client/views/layouts/: main.handlebars
alt_webview/: .env  helpers.js  main.py  preload.js  requirements-win.txt  requirements.txt
src/apps/client/: astro.config.mjs  jsconfig.json  package.json  tailwind.config.js
src/apps/client/.astro/: settings.json
src/apps/client/public/: style.css
src/apps/client/src/: main.js  preload.mjs
src/apps/client/src/config/: paths.js
src/apps/client/src/electron/: helpers.js  main.js  preload.js  preloadExternal.js  preloadInsta.js  preloadInsta.mjs  preloadInstaSimplified.js
src/apps/client/src/lib/: IPCEventHandler.js
src/apps/client/src/pages/: index.astro  overlay.astro  predict.astro  settings.astro  train.astro
src/apps/client/src/stores/: global.store.js
src/apps/client/views/: index.handlebars
src/apps/server/: environment.yml  main.py  package.json  pyproject.toml  requirements.txt
src/apps/server/scripts/: run.dev.js  setup.js
src/apps/server/src/: Bessy.py  BessyInput.py  BessyLSLMessenger.py  BessyLSLResponseMessenger.py  BessyOutput.py  FesDevice.py  FlickTokModel.py  app.py  headset_sim.py  headset_sim_fn.py  pubsub.py
src/apps/server/src/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/apps/server/src/utils/: headset_sim_fn.py  helpers.py  store.py
temp/: errlog.txt
(+23 files in other folders)
